crates/tribute-front/tests/snapshots/lambda_effect_type__effectful_lambda_multiple_operations.snap
---
source: crates/tribute-front/tests/lambda_effect_type.rs
expression: ir_text
---
core.module @test {
  !t0 = core.ability_ref<core.i32, {name = "State"}>
  !t1 = tribute_control.func_sig<() -> core.i32, {tribute.calling_convention = 2}>

  tribute_control.func @run_with_state(%0: !t1) -> core.i32 convention(cps) {
      %1 = tribute_control.handle : core.i32 {
          %2 = tribute_control.call_indirect %0 : core.i32
          tribute_control.yield %2
      } {
        ^bb2(%3: core.i32):
          tribute_control.yield %3
      } {
          tribute_control.handler {ability_ref = !t0, kind = "op", op_name = "get", operation_result_type = core.i32} {
            ^bb4(%4: tribute_control.resume_token<core.i32, core.i32>):
              %5 = arith.const {value = 0} : core.i32
              %6 = tribute_control.resume %4, %5 : core.i32
              tribute_control.yield %6
          }
          tribute_control.handler {ability_ref = !t0, kind = "op", op_name = "set", operation_result_type = core.nil} {
            ^bb5(%7: core.i32, %8: tribute_control.resume_token<core.nil, core.i32>):
              %9 = core.nil_value : core.nil
              %10 = tribute_control.resume %8, %9 : core.i32
              tribute_control.yield %10
          }
      }
      tribute_control.return %1
  }
  tribute_control.func @"Int::+"(%arg0: core.i32, %arg1: core.i32) -> core.i32 convention(direct)
  tribute_control.func @main() -> core.i32 convention(cps) attributes {tribute.root_source_result = core.i32} {
      %0 = tribute_control.lambda() -> core.i32 convention(cps) captures [] {
          %1 = tribute_control.perform {ability_ref = !t0, op_name = "get", operation_kind = "op"} : core.i32
          %2 = arith.const {value = 1} : core.i32
          %3 = tribute_control.call %1, %2 {callee = @"Int::+"} : core.i32
          %4 = tribute_control.perform %3 {ability_ref = !t0, op_name = "set", operation_kind = "op"} : core.nil
          tribute_control.return %1
      }
      %5 = tribute_control.call %0 {callee = @run_with_state} : core.i32
      tribute_control.return %5
  }
}
