crates/tribute-front/tests/snapshots/lambda_effect_type__handler_arm_continuation_lambda.snap
---
source: crates/tribute-front/tests/lambda_effect_type.rs
expression: ir_text
---
core.module @test {
  !t0 = tribute_control.func_sig<() -> tribute_rt.anyref, {tribute.calling_convention = 2}>
  !t1 = core.ability_ref<tribute_rt.anyref, {instance = "ability_2_5_State_11_bound_1_1_1", name = "State"}>

  tribute_control.func @run_state(%0: !t0, %1: tribute_rt.anyref) -> tribute_rt.anyref convention(cps) {
      %2 = tribute_control.handle : tribute_rt.anyref {
          %3 = tribute_control.call_indirect %0 : tribute_rt.anyref
          tribute_control.yield %3
      } {
        ^bb2(%4: tribute_rt.anyref):
          tribute_control.yield %4
      } {
          tribute_control.handler {ability_ref = !t1, kind = "op", op_name = "get", operation_result_type = tribute_rt.anyref} {
            ^bb4(%5: tribute_control.resume_token<tribute_rt.anyref, tribute_rt.anyref>):
              %6 = tribute_control.lambda() -> tribute_rt.anyref convention(cps) captures [%1, %5] {
                  %7 = tribute_control.resume %5, %1 : tribute_rt.anyref
                  tribute_control.return %7
              }
              %8 = tribute_control.call %6, %1 {callee = @run_state} : tribute_rt.anyref
              tribute_control.yield %8
          }
          tribute_control.handler {ability_ref = !t1, kind = "op", op_name = "set", operation_result_type = core.nil} {
            ^bb6(%9: tribute_rt.anyref, %10: tribute_control.resume_token<core.nil, tribute_rt.anyref>):
              %11 = tribute_control.lambda() -> tribute_rt.anyref convention(cps) captures [%10] {
                  %12 = core.nil_value : core.nil
                  %13 = tribute_control.resume %10, %12 : tribute_rt.anyref
                  tribute_control.return %13
              }
              %14 = tribute_control.call %11, %9 {callee = @run_state} : tribute_rt.anyref
              tribute_control.yield %14
          }
      }
      tribute_control.return %2
  }
  tribute_control.func @main() -> core.i32 convention(direct) {
      %0 = arith.const {value = 0} : core.i32
      tribute_control.return %0
  }
  ability.decl {ability_ref = !t1, sym_name = "ability_2_5_State_11_bound_1_1_1"} {
      ability.operation {kind = "op", op_name = "get", param_types = [], result_type = tribute_rt.anyref}
      ability.operation {kind = "op", op_name = "set", param_types = [tribute_rt.anyref], result_type = core.nil}
  }
}
