crates/tribute-front/tests/snapshots/lambda_effect_type__lambda_effect_row_unification.snap
---
source: crates/tribute-front/tests/lambda_effect_type.rs
expression: ir_text
---
core.module @test {
  !t0 = tribute_control.func_sig<() -> tribute_rt.anyref, {tribute.calling_convention = 2}>
  !t1 = core.ability_ref<tribute_rt.anyref, {instance = "ability_2_5_State_11_bound_1_1_1", name = "State"}>
  !t2 = tribute_control.func_sig<() -> core.i32, {tribute.calling_convention = 2}>

  tribute_control.func @with_state(%0: !t0, %1: tribute_rt.anyref) -> tribute_rt.anyref convention(cps) {
      %2 = tribute_control.handle : tribute_rt.anyref {
          %3 = tribute_control.call_indirect %0 : tribute_rt.anyref
          tribute_control.yield %3
      } {
        ^bb2(%4: tribute_rt.anyref):
          tribute_control.yield %4
      } {
          tribute_control.handler {ability_ref = !t1, kind = "op", op_name = "get", operation_result_type = tribute_rt.anyref} {
            ^bb4(%5: tribute_control.resume_token<tribute_rt.anyref, tribute_rt.anyref>):
              %6 = tribute_control.lambda() -> tribute_rt.anyref convention(cps) captures [%1, %5] {
                  %7 = tribute_control.resume %5, %1 : tribute_rt.anyref
                  tribute_control.return %7
              }
              %8 = tribute_control.call %6, %1 {callee = @with_state} : tribute_rt.anyref
              tribute_control.yield %8
          }
          tribute_control.handler {ability_ref = !t1, kind = "op", op_name = "set", operation_result_type = core.nil} {
            ^bb6(%9: tribute_rt.anyref, %10: tribute_control.resume_token<core.nil, tribute_rt.anyref>):
              %11 = tribute_control.lambda() -> tribute_rt.anyref convention(cps) captures [%10] {
                  %12 = core.nil_value : core.nil
                  %13 = tribute_control.resume %10, %12 : tribute_rt.anyref
                  tribute_control.return %13
              }
              %14 = tribute_control.call %11, %9 {callee = @with_state} : tribute_rt.anyref
              tribute_control.yield %14
          }
      }
      tribute_control.return %2
  }
  tribute_control.func @main() -> core.i32 convention(cps) attributes {tribute.root_source_result = core.i32} {
      %0 = tribute_control.lambda() -> core.i32 convention(cps) captures [] {
          %1 = tribute_control.perform {ability_ref = core.ability_ref<core.i32, {instance = "ability_2_5_State_3_nat", name = "State"}>, op_name = "get", operation_kind = "op"} : core.i32
          tribute_control.return %1
      }
      %2 = arith.const {value = 42} : core.i32
      %3 = core.unrealized_conversion_cast %0 : !t0
      %4 = core.unrealized_conversion_cast %2 : tribute_rt.anyref
      %5 = tribute_control.call %3, %4 {callee = @with_state} : tribute_rt.anyref
      %6 = core.unrealized_conversion_cast %5 : core.i32
      tribute_control.return %6
  }
}
