crates/tribute-front/tests/snapshots/lambda_effect_type__nested_lambda_inner_effectful.snap
---
source: crates/tribute-front/tests/lambda_effect_type.rs
expression: ir_text
---
core.module @test {
  !t0 = tribute_control.func_sig<() -> core.i32, {tribute.calling_convention = 2}>
  !t1 = core.ability_ref<core.i32, {instance = "ability_2_5_State_3_int", name = "State"}>

  tribute_control.func @run_with_state(%0: !t0) -> core.i32 convention(direct) {
      %1 = tribute_control.handle : core.i32 {
          %2 = tribute_control.call_indirect %0 : core.i32
          tribute_control.yield %2
      } {
        ^bb2(%3: core.i32):
          tribute_control.yield %3
      } {
          tribute_control.handler {ability_ref = !t1, kind = "op", op_name = "get", operation_result_type = core.i32} {
            ^bb4(%4: tribute_control.resume_token<core.i32, core.i32>):
              %5 = arith.const {value = 99} : core.i32
              %6 = tribute_control.resume %4, %5 : core.i32
              tribute_control.yield %6
          }
      }
      tribute_control.return %1
  }
  tribute_control.func @apply_thunk(%0: !t0) -> core.i32 convention(cps) {
      %1 = tribute_control.call_indirect %0 : core.i32
      tribute_control.return %1
  }
  tribute_control.func @main() -> core.i32 convention(cps) attributes {tribute.root_source_result = core.i32} {
      %0 = tribute_control.lambda() -> core.i32 convention(cps) captures [] {
          %1 = tribute_control.lambda() -> core.i32 convention(cps) captures [] {
              %2 = tribute_control.perform {ability_ref = !t1, op_name = "get", operation_kind = "op"} : core.i32
              tribute_control.return %2
          }
          %3 = tribute_control.call %1 {callee = @run_with_state} : core.i32
          tribute_control.return %3
      }
      %4 = tribute_control.call %0 {callee = @apply_thunk} : core.i32
      tribute_control.return %4
  }
}
