crates/tribute-front/tests/snapshots/lambda_effect_type__pure_lambda_with_capture_no_effect.snap
---
source: crates/tribute-front/tests/lambda_effect_type.rs
expression: ir_text
---
core.module @test {
  !t0 = tribute_control.func_sig<(core.i32) -> core.i32, {tribute.calling_convention = 2}>

  tribute_control.func @apply(%0: !t0, %1: core.i32) -> core.i32 convention(cps) {
      %2 = tribute_control.call_indirect %0, %1 : core.i32
      tribute_control.return %2
  }
  tribute_control.func @"std::Int::+"(%arg0: core.i32, %arg1: core.i32) -> core.i32 convention(direct)
  tribute_control.func @main() -> core.i32 convention(cps) attributes {tribute.root_source_result = core.i32} {
      %0 = arith.const {value = 10} : core.i32
      %1 = tribute_control.lambda(%2: core.i32) -> core.i32 convention(cps) captures [%0] {
          %3 = tribute_control.call %2, %0 {callee = @"std::Int::+"} : core.i32
          tribute_control.return %3
      }
      %4 = arith.const {value = 32} : core.i32
      %5 = tribute_control.call %1, %4 {callee = @apply} : core.i32
      tribute_control.return %5
  }
}
